packages/edxml-test-corpus/edxml-test-corpus-3.0.1.tar.gz/edxml-test-corpus-3.0.1/edxml_test_corpus/tests/3/3.0/3.0.0/invalid/ontology/relation-intra-target-is-not-associated-with-concept.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if an intra-concept relation having a target property
which is not associated with the specified concept is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
    </object-types>
    <concepts>
      <concept name="a" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
      <concept name="b" description="b" display-name-singular="b" display-name-plural="b" version="1"/>
      <concept name="c" description="c" display-name-singular="c" display-name-plural="c" version="1"/>
    </concepts>
    <event-types>
      <event-type name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match">
            <property-concept name="a" confidence="8" cnp="8"/>
          </property>
          <property name="b" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match">
            <property-concept name="b" confidence="8" cnp="8"/>
          </property>
        </properties>
        <relations>
          <intra source="a" target="b" source-concept="a" target-concept="c" description="[[a]] linked to [[b]]" confidence="2" predicate="linked"/>
        </relations>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
</edxml>
